[package]
name = "rust-twilio-df-stream"
version = "0.1.0"
authors = ["Mark <mark.jordanoviclewis@sabiogroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilio-async = "0.4.1"
twiml = "0.3.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
tracing = { version = "0.1.26", features = ["log", "std", "attributes"] }
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"
warp = "0.3.1"
tokio = { version = "1.6.0", features = ["full"] }
futures = "0.3.15"
futures-util = "0.3.15"
async-global-executor = "2.0.2"
lapin = "1.7.1"
